fixed overflow and footer css

--- a/components/footer/style.css
+++ b/components/footer/style.css
@@ -1,7 +1,16 @@
-footer{
+/*footer{
     width: 100%;
     height: 50px;
     position: absolute;
+    bottom: 0px;
+    background-color: var(--color-white);
+    opacity: 0.7;
+}*/
+
+footer{
+    width: 100%;
+    height: 50px;
+    position: relative;
     bottom: 0px;
     background-color: var(--color-white);
     opacity: 0.7;
