--- a/components/hero/style.css
+++ b/components/hero/style.css
@@ -5,7 +5,7 @@
     max-height: 90svh;
     height: 600px;
     display: flex;
-
+    overflow: hidden;
 }
 
 #hero-text {
