--- a/components/home/style.css
+++ b/components/home/style.css
@@ -1,3 +1,4 @@
 #home{
     max-width: 100%;
+    height: 95.5vh;
 }
