--- a/style.css
+++ b/style.css
@@ -46,6 +46,8 @@ body{
   overflow: hidden;
 }
 #app{
+  height: 100vh;
+  width: 100vw;
   margin: 0 auto;
   overflow-y: visible;
 }
@@ -55,13 +57,13 @@ body{
   flex-direction: column;
   align-items: center !important;
   justify-content: center;
-  height: 88vh;
+  height: 75vh;
   min-height: 480px;
 }
 
 @media (max-height: 800px){
-  body{overflow-x: scroll;}
-  /*#app{overflow-y: visible;}*/
+  /*body{overflow-y: hidden;}
+  #app{overflow-y: visible;}*/
   #game-section{
     overflow-y: scroll;
   }
